# NM_KSR_10

./: .gitignore  123.cpp  CMakeLists.txt  cheat.c  heat_solver.c  heat_solver.h  show.py
headers/: cheat.h  heat_solver.h  ncurses_elements.h
samples/: main.c
src/: cheat.c  heat_solver.c  ncurses_elements.c
tests/: test_cheat.cpp
